🐜 Fixes video overflow and SEO

--- a/src/styles.css
+++ b/src/styles.css
@@ -130,6 +130,10 @@ body {
     color var(--transition--theme);
 }
 
+video {
+  max-width: 100%;
+}
+
 h1,
 .h1,
 h2,
